--- a/05 Implementation/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/05 Implementation/AndroidUI/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewYorkerUI">
-        <activity android:name=".Loadingscreen"></activity>
+        <activity android:name=".Catalogue"></activity>
+        <activity android:name=".Loadingscreen" />
         <activity android:name=".ShowAccept" />
         <activity android:name=".UserContact" />
         <activity android:name=".ShowMeasurements" />
