--- a/05 Implementation/New-Yorker designer app/app/src/main/AndroidManifest.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/AndroidManifest.xml
@@ -3,18 +3,19 @@
     package="com.example.newyorkerui">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NewYorkerUI">
-        <activity android:name=".Loadingscreen"></activity>
+        android:theme="@style/Theme.NewYorkerUI"
+        android:allowBackup="true">
+        <activity android:name=".Loadingscreen" />
         <activity android:name=".ShowAccept" />
         <activity android:name=".UserContact" />
         <activity android:name=".ShowMeasurements" />
         <activity android:name=".ShowWall" />
         <activity android:name=".UserMeasurements" />
+        <activity android:name=".Catalogue" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
