--- a/05 Implementation/New-Yorker designer app/app/src/main/AndroidManifest.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
     package="com.example.newyorkerui">
 
     <application
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NewYorkerUI"
-        android:allowBackup="true">
+        android:theme="@style/Theme.NewYorkerUI">
+        <activity android:name=".doorhandletype"></activity>
+        <activity android:name=".doortype" />
         <activity android:name=".Loadingscreen" />
         <activity android:name=".ShowAccept" />
         <activity android:name=".UserContact" />
