--- a/05 Implementation/New-Yorker designer app/app/src/main/AndroidManifest.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewYorkerUI">
-        <activity android:name=".Glasstype"></activity>
+        <activity android:name=".AdjustDoor"></activity>
+        <activity android:name=".Glasstype" />
         <activity android:name=".Doorhandletype" />
         <activity android:name=".Doortype" />
         <activity android:name=".Loadingscreen" />
